# mlops-tutorial-test

./: .gitignore  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
mlops-tutorial/: __init__.py  dataset.py  features.py  plots.py
mlops-tutorial/modeling/: predict.py  train.py
mlruns/1/models/m-1b6a39ad6e504c7aa55b7ca9e5c5a719/artifacts/: MLmodel  registered_model_meta
mlruns/1/models/m-542d20c2d39d442890ada52e91409714/artifacts/: MLmodel
mlruns/1/models/m-902916f96bc94ce183f7834b5dd5a839/artifacts/: MLmodel  registered_model_meta
mlruns/1/models/m-a26ab1c518a1439fbc958bb1ca091b57/artifacts/: MLmodel
mlruns/1/models/m-b4580731b22949978e7d1b3d4c8e442b/artifacts/: MLmodel
mlruns/1/models/m-c9f532375ac0495cacd890849d24ad96/artifacts/: MLmodel
notebooks/: 04_model_registry.ipynb  mlflow.db
